# langIdentifier

./: main.py  pyproject.toml
lang_identifier/: checker.py  identifier.py
